--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,6 @@
 # Supabase Connection Details
 # You can find the connection string in your Supabase project settings -> Database -> Connection string -> URI
-DATABASE_URL=postgres://postgres:[YOUR-PASSWORD]@[YOUR-HOST]:5432/postgres
+DATABASE_URL=postgresql://postgres.mxhptgzugyidqbfthxbb:SmartPlace@123@aws-1-ap-southeast-1.pooler.supabase.com:6543/postgres
 
 # Server Port
 PORT=3000
