--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,12 @@
 FROM node:20-alpine
+
 WORKDIR /app
-COPY package*.json ./ 
-RUN npm install 
+
+COPY package*.json ./
+RUN npm install
+
 COPY . .
-EXPOSE 5173
-CMD ["npm", "run", "dev"]
+
+EXPOSE 3000
+
+CMD ["node", "index.js"]
