--- a/smartplace/package.json
+++ b/smartplace/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.96.0",
+    "axios": "^1.13.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
